Update qna.yaml with version and github username
add version tag and github username

Signed-off-by: makusvankempen <130377444+makusvankempen@users.noreply.github.com>

--- a/knowledge/textbook/culture/starwars/tvseries/theacolyte/qna.yaml
+++ b/knowledge/textbook/culture/starwars/tvseries/theacolyte/qna.yaml
@@ -1,5 +1,6 @@
+version: 2
 task_description: 'Teach the model on Star Wars The Acolyte (TV series)'
-created_by: markus.van.kempen
+created_by: makusvankempen
 domain: starwars
 seed_examples:
  - question: Who created Star Wars The Acolyte?
