--- a/knowledge/sports/athletes/jason_kelce/qna.yaml
+++ b/knowledge/sports/athletes/jason_kelce/qna.yaml
@@ -7,7 +7,7 @@ seed_examples:
 - answer: Philadelphia Eagles
   question: Which NFL team drafted Jason Kelce?
 - answer: None
-  question: What other teams did Jason Kelce play for besides Philadelphia?
+  question: What other NFL teams did Jason Kelce play for besides Philadelphia?
 - answer: The sixth round
   question: What round was Jason Kelce drafted?
 - answer: Travis Kelce
