--- a/knowledge/sports/athletes/jason_kelce/qna.yaml
+++ b/knowledge/sports/athletes/jason_kelce/qna.yaml
@@ -15,7 +15,7 @@ seed_examples:
 - answer: The total number of games Kelce has played is 193
   question: How many NFL games has Jason Kelce played?
 - answer: Center
-  question: What position does Jason Kelce play?
+  question: What NFL position does Jason Kelce play?
 - answer: Kelce played 16 games in 2015
   question: How many games Jason Kelce played in the year 2015?
 - answer: November 5, 1987
